<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightblue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity1" >

    <TextView
        android:id="@+id/text1"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@drawable/yellow"
        android:text="@string/text1"
        />
    
    <Button 
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/button1"
        />
        
    <Button 
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="220dp"
        android:text="@string/button3"
        />
    
    <Button 
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="270dp"
        android:text="@string/button5"
        />
    
        <Button 
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="320dp"
        android:text="@string/button7"
        />
    
<!-- 设置默认选项  -->
<!-- 1. RadioGroup  android:checkedButton="@+id/sex2" -->
<!-- 2. RadioButton  android:checked="true" -->
     <RadioGroup 
		android:id="@+id/radioGroup"
		android:contentDescription="@string/radioGroup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
        android:layout_marginTop="110dp"
		android:checkedButton="@+id/sex1">
     		<RadioButton
     		    android:id="@+id/sex1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sex1">
     		</RadioButton>
     		<RadioButton
     		    android:id="@+id/sex2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sex2">
     		</RadioButton>
     </RadioGroup>
    
    <EditText 
        android:id="@+id/height"
        android:inputType="numberSigned"
        android:hint="@string/EditText"
        android:textColorHint="#999999"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="170dp"
        />

</RelativeLayout>
